# mediagoblin

./: .dockerignore  .gitignore  AUTHORS  Dockerfile-debian-10-sqlite  Dockerfile-debian-11-sqlite  Dockerfile-debian-python3-sqlite  Dockerfile-fedora-33-sqlite  Dockerfile-fedora-python3-sqlite  MANIFEST.in  Makefile.in  README.md  bootstrap.sh  configure.ac  docker-compose.yml  guix-env.scm  mediagoblin.example.ini  paste.ini  setup.cfg  setup.py  tox.ini
.builds/: debian-10-sqlite.yml  debian-10-with-site-packages.yml  debian-11-docker.yml  debian-11-sqlite.ypm  debian-11-with-site-packages.yml  fedora-33-docker.yml  fedora-33-sqlite.yml  fedora-33-with-site-packages.yml  ubuntu-20.04.yml
api-docs/source/: conf.py
devtools/: compile_translations.sh
docs/source/: conf.py  index.rst
docs/source/devel/: codebase.rst  contributing.rst  originaldesigndecisions.rst  release.rst
docs/source/pluginwriter/: authhooks.rst
docs/source/siteadmin/: commandline-upload.rst  configuration.rst  deploying.rst  foreword.rst  media-types.rst  plugins.rst  production-deployments.rst  relnotes.rst  troubleshooting.rst  upgrading.rst
extlib/: README
mediagoblin/: _compat.py  _version.py  app.py  config_spec.ini  decorators.py  errormiddleware.py  mg_globals.py  views.py
mediagoblin/api/: decorators.py  views.py
mediagoblin/auth/: tools.py  views.py
mediagoblin/db/: base.py  migration_tools.py  migrations.py  mixin.py  models.py  open.py  util.py
mediagoblin/db/migrations/: env.py
mediagoblin/edit/: forms.py  lib.py  views.py
mediagoblin/gmg_commands/: __init__.py  addmedia.py  alembic_commands.py  assetlink.py  batchaddmedia.py  celery.py  dbupdate.py  deletemedia.py  reprocess.py  serve.py  users.py  util.py
mediagoblin/init/: __init__.py  config.py
mediagoblin/init/celery/: __init__.py  from_celery.py
mediagoblin/listings/: views.py
mediagoblin/meddleware/: __init__.py  csrf.py
mediagoblin/media_types/: __init__.py  tools.py
mediagoblin/media_types/ascii/: asciitoimage.py  processing.py
mediagoblin/media_types/audio/: audiotospectrogram.py  (+2 more)
mediagoblin/moderation/: forms.py  tools.py  views.py
mediagoblin/notifications/: __init__.py  task.py
mediagoblin/oauth/: oauth.py  views.py
mediagoblin/processing/: __init__.py  task.py
mediagoblin/storage/: __init__.py  cloudfiles.py  filestorage.py  mountstorage.py
mediagoblin/submit/: forms.py  lib.py  views.py
mediagoblin/tests/: test_api.py  test_auth.py  test_basic_auth.py  test_config.py  test_edit.py  test_exif.py  test_feed.py  test_globals.py  test_ldap.py  test_legacy_api.py  test_metadata.py  test_misc.py  test_modelmethods.py  test_moderation.py  test_notifications.py  test_oauth1.py  test_openid.py  test_persona.py  test_piwigo.py  test_pluginapi.py  test_privileges.py  test_processing.py  test_reporting.py  test_response.py  test_sql_migrations.py  test_storage.py  test_submission.py  test_subtitles.py  test_tags.py  test_tools.py  test_util.py  test_workbench.py  tools.py
mediagoblin/tools/: common.py  crypto.py  exif.py  feeds.py  files.py  licenses.py  mail.py  metadata.py  pagination.py  pluginapi.py  processing.py  request.py  response.py  routing.py  session.py  staticdirect.py  subtitles.py  template.py  text.py  timesince.py  translate.py  url.py  validator.py  workbench.py
mediagoblin/user_pages/: forms.py  views.py
(+57 files in other folders)
