# GNU MediaGoblin -- federated, autonomous media hosting
# Copyright (C) 2011, 2012 MediaGoblin contributors.  See AUTHORS.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = mediagoblin
version = attr: mediagoblin._version.__version__
author = MediaGoblin contributors
author_email = mediagoblin-devel@gnu.org
license = AGPLv3
description = MediaGoblin is a web application for publishing all kinds of media
long_description = file: README
url = https://mediagoblin.org/
project_urls =
    Bug Tracker = https://issues.mediagoblin.org/report/1
classifiers=[
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires =
    alembic>=0.7.5
    Babel>=1.3
    celery>=3.0,<4.3.0  # Removed the "sqlite" transport alias in 4.3.0
                        # making tests fail.
    certifi>=2017.4.17  # Required by requests on Fedora 33 (bin/gmg fails)
    ConfigObj
    email-validator
    ExifRead>=2.0.0
    feedgenerator
    itsdangerous
    jinja2<3.0.0  # 3.0.0 uses f-strings (Python >= 3.7) breaking Debian 9.
    jsonschema
    Markdown
    oauthlib
    PasteScript
    py-bcrypt
    PyLD<2.0.0  # Breaks a Python 3 test if >= 2.0.0.
    python-dateutil
    pytz
    requests>=2.6.0
    soundfile
    sphinx
    sqlalchemy<1.4.0
    unidecode
    waitress
    werkzeug>=0.7,<2.0.0  # 2.0.0 breaks legacy API and submission tests.
    wtforms>2.1,<3.0  # Removed the "ext" module in 3.0.

    # For now we're expecting that users will install this from
    # their package managers.
    # 'lxml',
    # 'Pillow',

[options.extras_require]
test =
    pytest>=2.3.1
    pytest-xdist
    WebTest>=2.0.18

[options.entry_points]
console_scripts =
    gmg = mediagoblin.gmg_commands:main_cli
paste.app_factory =
    app = mediagoblin.app:paste_app_factory
paste.server_runner =
    paste_server_selector = mediagoblin.app:paste_server_selector
paste.filter_app_factory =
    errors = mediagoblin.errormiddleware:mgoblin_error_middleware
zc.buildout =
    make_user_dev_dirs = mediagoblin.buildout_recipes:MakeUserDevDirs
babel.extractors =
    jinja2 = jinja2.ext:babel_extract

[options.data_files]
# Running gmg dbupdate fails with missing env.py because env.py isn't
# being included in the Python package (no __init__.py).
mediagoblin = mediagoblin/db/migrations/env.py
